--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 </li>
                 <li><a href="./index.html">Expertises</a></li>
                 <li><a href="">Présentation</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./contact.html" class="btn">Faire appel à nous</a></li>
                 <li id="burger_menu" onclick="toggleNav()"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="10" y="0.5" width="15" height="3" rx="1.5" fill="white"/><rect y="10.5" width="25" height="3" rx="1.5" fill="white"/><rect x="5" y="20.5" width="20" height="3" rx="1.5" fill="white"/></svg></li>
             </ul>
             <ul id="nav_slider">
                 <li><a href="./index.html">Expertises</a></li>
                 <li><a href="">Présentation</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./contact.html" class="btn">Faire appel à nous</a></li>
             </ul>
         </nav>
@@ -244,7 +244,7 @@
             <div class="article" style="background-image: url(./images/pexels-greta-hoffman-7675870.jpg);">
                 <h3>L'importance  de la Présence en Ligne  : Les Chiffres ne Mentent Pas !</h3>
                 <p>Dans un contexte où la technologie régit les échanges commerciaux, la présence en ligne est cruciale pour toute entreprise, quelle que soit sa taille. Négliger cet aspect peut entraîner des conséquences financières désastreuses. Les chiffres ne mentent pas, voyons pourquoi...</p>
-                <a href="" class="btn2">
+                <a href="./articles/La_puissance_de_Google_Ads.html" class="btn2">
                     <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
                     En savoir plus
                 </a>
@@ -252,7 +252,7 @@
             <div class="article" style="background-image: url(./images/pexels-ivan-samkov-7620629.jpg);">
                 <h3>L'Évolution de l'E-commerce : Pourquoi les Boutiques en Ligne Sont Essentielles pour Toute Entreprise ?</h3>
                 <p>L'e-commerce a révolutionné les interactions clients-entreprises et souligne l'importance grandissante des boutiques en ligne pour toutes les entreprises. Voyons comment cette tendance affecte le monde des affaires...</p>
-                <a href="" class="btn2">
+                <a href="./articles/L_evolution_imparable_de_l_e-commerce.html" class="btn2">
                     <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
                     En savoir plus
                 </a>
@@ -260,7 +260,7 @@
             <div class="article" style="background-image: url(./images/pexels-zachtheshoota-2953898.jpg);">
                 <h3>La Puissance de la Création de Contenu : Saisir les Opportunités de ce nouveau marché...</h3>
                 <p>Dans un monde numérique en perpétuelle évolution, la création de contenu est cruciale pour toute entreprise. Elle offre des opportunités uniques pour engager le public, renforcer la marque et stimuler la croissance. Voyons pourquoi et comment en tirer parti...</p>
-                <a href="" class="btn2">
+                <a href="./articles/La_puissance_de_la_création_de_contenu.html" class="btn2">
                     <svg width="30" height="14" viewBox="0 0 30 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.50012 1.37326C2.50012 0.681819 1.9415 0.123198 1.25006 0.123198C0.55862 0.123198 -2.44181e-08 0.681819 -5.46419e-08 1.37326L-2.18568e-07 5.12344C-3.09068e-07 7.19386 1.67977 8.87363 3.75018 8.87363L25.7312 8.87363L22.8639 11.741C22.3756 12.2293 22.3756 13.0223 22.8639 13.5106C23.3522 13.9989 24.1452 13.9989 24.6335 13.5106L29.6338 8.51033C30.1221 8.02202 30.1221 7.22901 29.6338 6.74071L24.6335 1.74047C24.1452 1.25216 23.3522 1.25216 22.8639 1.74047C22.3756 2.22877 22.3756 3.02178 22.8639 3.51008L25.7312 6.3735L3.75018 6.3735C3.05874 6.3735 2.50012 5.81488 2.50012 5.12344L2.50012 1.37326Z" fill="#2F59CC"/></svg>
                     En savoir plus
                 </a>
